app/src/main/java/com/example/framgia/architecture/data/source/remote/error/ErrorCode.kt
package com.example.framgia.architecture.data.source.remote.error

/**
 * Created by Hyperion on 15/12/2017.
 * Contact me thuanpx1710@gmail.com.
 * Thank you !
 */
enum class ErrorCode {
    NETWORK_EXCEPTION,
    UNEXPECTED_EXCEPTION,
    HTTP_EXCEPTION;
}
